--- a/test/index.html
+++ b/test/index.html
@@ -5,28 +5,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dating App</title>
 <style>
-  body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
-  .container { max-width:800px; margin:20px auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
-  input, select { display:block; width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #ccc;}
-  button { padding:10px 20px; margin:5px; border:none; border-radius:5px; cursor:pointer;}
-  .user-card { display:flex; align-items:center; justify-content:space-between; border:1px solid #ddd; padding:10px; border-radius:8px; margin-bottom:10px; background:#fafafa;}
-  .user-info { display:flex; align-items:center;}
-  .user-info img { width:50px; height:50px; border-radius:50%; margin-right:10px; object-fit:cover;}
-  .status { width:12px; height:12px; border-radius:50%; display:inline-block; margin-right:5px;}
-  .online { background:green; }
-  .offline { background:red; }
-  .video-call { background: #2196F3; color:white;}
-  .block-btn { background:#f44336; color:white;}
-  .unblock-btn { background:#4CAF50; color:white;}
-  .report-btn { background:#ff9800; color:white;}
-  #videoContainer { display:none; margin-top:20px; }
-  video { width:100%; max-width:400px; border:1px solid #ccc; border-radius:10px; }
+body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
+.container { max-width:900px; margin:20px auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
+input, select { display:block; width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #ccc;}
+button { padding:10px 20px; margin:5px; border:none; border-radius:5px; cursor:pointer;}
+.user-card { display:flex; align-items:center; justify-content:space-between; border:1px solid #ddd; padding:10px; border-radius:8px; margin-bottom:10px; background:#fafafa;}
+.user-info { display:flex; align-items:center;}
+.user-info img { width:50px; height:50px; border-radius:50%; margin-right:10px; object-fit:cover;}
+.status { width:12px; height:12px; border-radius:50%; display:inline-block; margin-right:5px;}
+.online { background:green; }
+.offline { background:red; }
+.video-call { background: #2196F3; color:white;}
+.block-btn { background:#f44336; color:white;}
+.unblock-btn { background:#4CAF50; color:white;}
+.report-btn { background:#ff9800; color:white;}
+#videoContainer { display:none; margin-top:20px; }
+video { width:100%; max-width:400px; border:1px solid #ccc; border-radius:10px; margin-bottom:10px;}
 </style>
 </head>
 <body>
 <div class="container">
+
+  <!-- User Input -->
   <div id="loginDiv">
-    <h2>Login</h2>
+    <h2>Enter Your Details</h2>
     <input type="text" id="name" placeholder="Name">
     <input type="number" id="age" placeholder="Age">
     <select id="gender">
@@ -36,20 +38,23 @@
       <option value="Other">Other</option>
     </select>
     <input type="file" id="profileImage">
-    <button onclick="login()">Login</button>
+    <button onclick="enterApp()">Enter App</button>
   </div>
 
+  <!-- Users List -->
   <div id="usersDiv" style="display:none;">
     <h2>Users</h2>
     <div id="usersList"></div>
   </div>
 
+  <!-- Video Call -->
   <div id="videoContainer">
     <h3>Video Call</h3>
     <video id="localVideo" autoplay muted></video>
     <video id="remoteVideo" autoplay></video>
     <button onclick="endCall()">End Call</button>
   </div>
+
 </div>
 
 <!-- Firebase -->
@@ -58,6 +63,7 @@
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
 
 <script>
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyDIzeINHRm-0jAfbsB0-7flr5sOasaEEy4",
   authDomain: "vmdatting.firebaseapp.com",
@@ -69,30 +75,32 @@ const firebaseConfig = {
   measurementId: "G-XH9LHSPWYM"
 };
 firebase.initializeApp(firebaseConfig);
-
 const db = firebase.database();
 const storage = firebase.storage();
 
 let currentUser = null;
 
-// LOGIN FUNCTION
-async function login() {
+// ENTER APP
+async function enterApp() {
   const name = document.getElementById('name').value.trim();
   const age = document.getElementById('age').value.trim();
   const gender = document.getElementById('gender').value;
   const file = document.getElementById('profileImage').files[0];
-  
+
   if(!name || !age || !gender || !file) { alert("All fields required"); return; }
 
+  // Upload image
   const imageRef = storage.ref('profiles/' + Date.now() + '_' + file.name);
   await imageRef.put(file);
   const imageUrl = await imageRef.getDownloadURL();
 
+  // Save user to database
   const userRef = db.ref('users').push();
   const userData = { name, age, gender, imageUrl, online:true, blocked:false };
   await userRef.set(userData);
 
   currentUser = { id: userRef.key, ...userData };
+
   document.getElementById('loginDiv').style.display='none';
   document.getElementById('usersDiv').style.display='block';
 
@@ -140,7 +148,7 @@ function reportUser(uid) {
   alert('Reported user: '+uid);
 }
 
-// VIDEO CALL SETUP (simplified peer-to-peer WebRTC)
+// VIDEO CALL
 let localStream, pc, remoteVideo=document.getElementById('remoteVideo');
 async function startCall(uid) {
   document.getElementById('videoContainer').style.display='block';
@@ -152,7 +160,6 @@ async function startCall(uid) {
   
   pc.ontrack = e => { remoteVideo.srcObject = e.streams[0]; }
 
-  // Simplified signaling using Firebase
   const callRef = db.ref('calls/'+currentUser.id+'_'+uid);
   pc.onicecandidate = e => { if(e.candidate) callRef.child('ice').push(JSON.stringify(e.candidate)); }
 
@@ -178,6 +185,7 @@ function endCall() {
   if(pc) pc.close();
   document.getElementById('videoContainer').style.display='none';
 }
+
 </script>
 </body>
 </html>
