--- a/test/index.html
+++ b/test/index.html
@@ -1,191 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Dating App</title>
-<style>
-body { font-family: Arial, sans-serif; background:#f2f2f2; margin:0; padding:0;}
-.container { max-width:900px; margin:20px auto; background:#fff; padding:20px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.1);}
-input, select { display:block; width:100%; padding:10px; margin:10px 0; border-radius:5px; border:1px solid #ccc;}
-button { padding:10px 20px; margin:5px; border:none; border-radius:5px; cursor:pointer;}
-.user-card { display:flex; align-items:center; justify-content:space-between; border:1px solid #ddd; padding:10px; border-radius:8px; margin-bottom:10px; background:#fafafa;}
-.user-info { display:flex; align-items:center;}
-.user-info img { width:50px; height:50px; border-radius:50%; margin-right:10px; object-fit:cover;}
-.status { width:12px; height:12px; border-radius:50%; display:inline-block; margin-right:5px;}
-.online { background:green; }
-.offline { background:red; }
-.video-call { background: #2196F3; color:white;}
-.block-btn { background:#f44336; color:white;}
-.unblock-btn { background:#4CAF50; color:white;}
-.report-btn { background:#ff9800; color:white;}
-#videoContainer { display:none; margin-top:20px; }
-video { width:100%; max-width:400px; border:1px solid #ccc; border-radius:10px; margin-bottom:10px;}
-</style>
+  <meta charset="UTF-8">
+  <title>Simple Dating App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
 
-  <!-- User Input -->
-  <div id="loginDiv">
-    <h2>Enter Your Details</h2>
-    <input type="text" id="name" placeholder="Name">
-    <input type="number" id="age" placeholder="Age">
-    <select id="gender">
-      <option value="">Select Gender</option>
-      <option value="Male">Male</option>
-      <option value="Female">Female</option>
-      <option value="Other">Other</option>
-    </select>
-    <input type="file" id="profileImage">
-    <button onclick="enterApp()">Enter App</button>
+  <div class="app">
+    <h1>💖 Dating App</h1>
+
+    <div class="card" id="profileCard">
+      <img id="profileImg" src="" alt="Profile">
+      <h2 id="name"></h2>
+      <p id="ageGender"></p>
+    </div>
+
+    <div class="buttons">
+      <button class="dislike" onclick="dislike()">❌</button>
+      <button class="like" onclick="like()">❤️</button>
+    </div>
+
+    <p id="status"></p>
   </div>
 
-  <!-- Users List -->
-  <div id="usersDiv" style="display:none;">
-    <h2>Users</h2>
-    <div id="usersList"></div>
-  </div>
-
-  <!-- Video Call -->
-  <div id="videoContainer">
-    <h3>Video Call</h3>
-    <video id="localVideo" autoplay muted></video>
-    <video id="remoteVideo" autoplay></video>
-    <button onclick="endCall()">End Call</button>
-  </div>
-
-</div>
-
-<!-- Firebase -->
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
-
-<script>
-// Firebase config
-const firebaseConfig = {
-  apiKey: "AIzaSyDIzeINHRm-0jAfbsB0-7flr5sOasaEEy4",
-  authDomain: "vmdatting.firebaseapp.com",
-  databaseURL: "https://vmdatting-default-rtdb.firebaseio.com",
-  projectId: "vmdatting",
-  storageBucket: "vmdatting.firebasestorage.app",
-  messagingSenderId: "876437607489",
-  appId: "1:876437607489:web:46ad641659f621618562c0",
-  measurementId: "G-XH9LHSPWYM"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
-const storage = firebase.storage();
-
-let currentUser = null;
-
-// ENTER APP
-async function enterApp() {
-  const name = document.getElementById('name').value.trim();
-  const age = document.getElementById('age').value.trim();
-  const gender = document.getElementById('gender').value;
-  const file = document.getElementById('profileImage').files[0];
-
-  if(!name || !age || !gender || !file) { alert("All fields required"); return; }
-
-  // Upload image
-  const imageRef = storage.ref('profiles/' + Date.now() + '_' + file.name);
-  await imageRef.put(file);
-  const imageUrl = await imageRef.getDownloadURL();
-
-  // Save user to database
-  const userRef = db.ref('users').push();
-  const userData = { name, age, gender, imageUrl, online:true, blocked:false };
-  await userRef.set(userData);
-
-  currentUser = { id: userRef.key, ...userData };
-
-  document.getElementById('loginDiv').style.display='none';
-  document.getElementById('usersDiv').style.display='block';
-
-  listenUsers();
-}
-
-// LISTEN USERS
-function listenUsers() {
-  db.ref('users').on('value', snapshot => {
-    const usersList = document.getElementById('usersList');
-    usersList.innerHTML = '';
-    snapshot.forEach(child => {
-      const user = child.val();
-      const uid = child.key;
-      if(uid === currentUser.id) return; // skip self
-
-      const div = document.createElement('div');
-      div.className = 'user-card';
-      div.innerHTML = `
-        <div class="user-info">
-          <span class="status ${user.online?'online':'offline'}"></span>
-          <img src="${user.imageUrl}" />
-          <div>
-            <strong>${user.name}</strong> (${user.age}) <br> ${user.gender}
-          </div>
-        </div>
-        <div>
-          <button class="video-call" onclick="startCall('${uid}')">Video Call</button>
-          <button class="${user.blocked?'unblock-btn':'block-btn'}" onclick="toggleBlock('${uid}',${user.blocked})">${user.blocked?'Unblock':'Block'}</button>
-          <button class="report-btn" onclick="reportUser('${uid}')">Report</button>
-        </div>
-      `;
-      usersList.appendChild(div);
-    });
-  });
-}
-
-// BLOCK/UNBLOCK USER
-function toggleBlock(uid, blocked) {
-  db.ref('users/'+uid).update({ blocked: !blocked });
-}
-
-// REPORT USER
-function reportUser(uid) {
-  alert('Reported user: '+uid);
-}
-
-// VIDEO CALL
-let localStream, pc, remoteVideo=document.getElementById('remoteVideo');
-async function startCall(uid) {
-  document.getElementById('videoContainer').style.display='block';
-  localStream = await navigator.mediaDevices.getUserMedia({video:true, audio:true});
-  document.getElementById('localVideo').srcObject = localStream;
-
-  pc = new RTCPeerConnection();
-  localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
-  
-  pc.ontrack = e => { remoteVideo.srcObject = e.streams[0]; }
-
-  const callRef = db.ref('calls/'+currentUser.id+'_'+uid);
-  pc.onicecandidate = e => { if(e.candidate) callRef.child('ice').push(JSON.stringify(e.candidate)); }
-
-  const offer = await pc.createOffer();
-  await pc.setLocalDescription(offer);
-  await callRef.child('offer').set(JSON.stringify(offer));
-
-  callRef.child('answer').on('value', async snap => {
-    if(snap.exists() && snap.val()) {
-      const answer = JSON.parse(snap.val());
-      await pc.setRemoteDescription(answer);
-    }
-  });
-
-  callRef.child('ice').on('child_added', snap => {
-    const candidate = JSON.parse(snap.val());
-    pc.addIceCandidate(new RTCIceCandidate(candidate));
-  });
-}
-
-// END CALL
-function endCall() {
-  if(pc) pc.close();
-  document.getElementById('videoContainer').style.display='none';
-}
-
-</script>
+  <script src="app.js"></script>
 </body>
 </html>
