--- a/test/index.html
+++ b/test/index.html
@@ -1,209 +1,154 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Firebase Dating App</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Tamil Chat – Single HTML</title>
 
 <style>
-body{margin:0;font-family:Arial;background:#ff5a9e}
-.box{max-width:360px;margin:auto;background:#fff;min-height:100vh;padding:10px}
-input,select,button{width:100%;padding:10px;margin:6px 0;border-radius:8px;border:1px solid #ccc}
-button{background:#ff4e8a;color:#fff;border:none}
-.user{display:flex;align-items:center;padding:8px;border-bottom:1px solid #eee;cursor:pointer}
-.user img{width:45px;height:45px;border-radius:50%;margin-right:10px}
-.online{color:green;font-size:12px}
-.offline{color:red;font-size:12px}
-.chat{position:fixed;bottom:0;right:0;width:100%;max-width:360px;height:60%;background:#fff;display:none;flex-direction:column}
-.chat-header{background:#ff4e8a;color:#fff;padding:8px;display:flex;justify-content:space-between;align-items:center}
-.chat-body{flex:1;overflow:auto;padding:8px}
-.chat-input{display:flex}
-.chat-input input{flex:1}
-.small-btn{font-size:12px;padding:4px 6px;background:#fff;color:#ff4e8a;border-radius:6px}
+:root{
+  --accent:#25d366;
+  --panel:#202c33;
+  --muted:#97a4ab;
+}
+*{box-sizing:border-box}
+body{margin:0;background:#0b141a;color:#fff;font-family:system-ui,Arial,sans-serif}
+
+/* main chat */
+#messages{flex:1;overflow:auto;padding:12px;display:flex;flex-direction:column;gap:8px;background:#071215}
+.msg-row{display:flex;align-items:flex-end;max-width:80%;position:relative}
+.msg-row.self{align-self:flex-end;flex-direction:row-reverse}
+.avatar{width:36px;height:36px;border-radius:50%;background:#000;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;margin:0 8px;position:relative;cursor:pointer;border:2px solid transparent;transition:border .18s ease-in-out;overflow:hidden}
+.avatar.online{border-color:var(--accent);box-shadow:0 0 0 0 rgba(37,211,102,.6);animation:pulse 1.5s infinite}
+@keyframes pulse{0%{box-shadow:0 0 0 0 rgba(37,211,102,.6)}70%{box-shadow:0 0 0 6px rgba(37,211,102,0)}100%{box-shadow:0 0 0 0 rgba(37,211,102,0)}}
+.popup-menu{display:none;position:absolute;top:-44px;left:0;background:var(--panel);border-radius:8px;padding:6px;flex-direction:column;z-index:30;min-width:110px}
+.avatar:hover .popup-menu{display:flex}
+.popup-menu button{background:none;border:0;color:#fff;padding:6px 8px;text-align:left;cursor:pointer;border-radius:6px}
+.bubble{background:var(--panel);padding:8px 12px;border-radius:12px;font-size:14px;line-height:1.3;word-break:break-word}
+.msg-row.self .bubble{background:#005c4b}
+.meta{font-size:12px;color:#53bdeb;margin-bottom:4px;display:flex;align-items:center;gap:8px}
+.time{font-size:11px;color:var(--muted);margin-top:6px;text-align:right}
+
+#inputBar{display:flex;padding:10px;background:var(--panel);align-items:center;gap:8px}
+#messageInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff;outline:none;font-size:14px}
+#sendBtn{width:44px;height:44px;border-radius:50%;border:0;background:var(--accent);color:#fff;font-size:18px;cursor:pointer}
+
+#statusLine{padding:6px 12px;font-size:13px;color:var(--muted);background:#071215}
+#toast{position:fixed;left:50%;transform:translateX(-50%);bottom:24px;background:#2a3942;color:#fff;padding:10px 14px;border-radius:10px;z-index:999;opacity:0;transition:.25s}
+#toast.show{opacity:1;bottom:40px}
+
+/* login */
+#loginWrap{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.6);z-index:999}
+#loginCard{background:#0b141a;padding:18px;border-radius:12px;display:flex;flex-direction:column;gap:10px;min-width:300px}
+#loginCard input{padding:10px;border-radius:10px;border:0;background:#162027;color:#fff}
+#loginCard button{padding:10px;border-radius:10px;border:0;background:var(--accent);color:#fff;cursor:pointer}
+
+/* private popup */
+#privatePopup{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.6);z-index:1000}
+.card{background:#0b141a;padding:12px;border-radius:12px;max-width:680px;width:96%;display:flex;flex-direction:column;max-height:92%}
+#privateHeader{display:flex;align-items:center;gap:8px;margin-bottom:8px}
+#privateMessages{flex:1;overflow:auto;padding:8px;background:#071215;border-radius:8px;display:flex;flex-direction:column;gap:8px}
+.private-bubble{background:#162027;padding:8px 10px;border-radius:10px;max-width:80%}
+.private-row.self{align-self:flex-end}
+#privateInputBar{display:flex;gap:8px;margin-top:8px}
+#privateInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff}
+#privateSend{width:44px;height:44px;border-radius:50%;border:0;background:var(--accent);color:#fff;font-size:18px;cursor:pointer}
+
+/* app shell */
+#app{display:flex;flex-direction:column;height:100vh}
+#topBar{display:flex;align-items:center;padding:10px;background:#071215}
+#titleText{font-weight:700}
 </style>
 </head>
 
 <body>
 
-<!-- LOGIN -->
-<div class="box" id="login">
-  <h3>Login</h3>
-  <input id="name" placeholder="Name">
-  <input id="age" type="number" placeholder="Age">
-  <select id="gender">
-    <option>Male</option>
-    <option>Female</option>
-  </select>
-  <input type="file" id="photo">
-  <button onclick="register()">Continue</button>
+<div id="app">
+  <div id="topBar">
+    <div id="titleText">Group Chat</div>
+  </div>
+
+  <div id="statusLine"></div>
+  <div id="messages"></div>
+
+  <div id="inputBar">
+    <input id="messageInput" placeholder="Type a message"/>
+    <button id="sendBtn">➤</button>
+  </div>
 </div>
 
-<!-- USERS -->
-<div class="box" id="app" style="display:none">
-  <h3>Users</h3>
-  <div id="users"></div>
+<div id="toast"></div>
+
+<div id="loginWrap">
+  <div id="loginCard">
+    <div style="font-weight:700">Enter your name</div>
+    <input id="nameInput" placeholder="Your name"/>
+    <button id="joinBtn">Join</button>
+  </div>
 </div>
 
-<!-- CHAT -->
-<div class="chat" id="chat">
-  <div class="chat-header">
-    <span id="chatUser"></span>
-    <div>
-      <button class="small-btn" onclick="blockUser()">🚫</button>
-      <button class="small-btn" onclick="reportUser()">⚠️</button>
+<div id="privatePopup">
+  <div class="card">
+    <div id="privateHeader">
+      <button id="closePrivate">⬅</button>
+      <div id="privateTitle"></div>
+    </div>
+    <div id="privateMessages"></div>
+    <div id="privateInputBar">
+      <input id="privateInput" placeholder="Private message"/>
+      <button id="privateSend">➤</button>
     </div>
   </div>
-  <div class="chat-body" id="chatBody"></div>
-  <div class="chat-input">
-    <input id="msg">
-    <button onclick="sendMsg()">Send</button>
-  </div>
 </div>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getDatabase, ref, set, onValue, push, update, onDisconnect } 
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
-import { getStorage, ref as sRef, uploadBytes, getDownloadURL } 
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
-import { getMessaging, getToken, onMessage }
-from "https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging.js";
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
-const firebaseConfig = {
-  apiKey: "AIzaSyDIzeINHRm-0jAfbsB0-7flr5sOasaEEy4",
-  authDomain: "vmdatting.firebaseapp.com",
-  databaseURL: "https://vmdatting-default-rtdb.firebaseio.com",
-  projectId: "vmdatting",
-  storageBucket: "vmdatting.firebasestorage.app",
-  messagingSenderId: "876437607489",
-  appId: "1:876437607489:web:46ad641659f621618562c0"
+<script>
+const firebaseConfig={
+  apiKey:"AIzaSyB1VbLbqBxCiG_bfGoQgQyapXwHUQ-Q7BU",
+  authDomain:"tamil-chat-2d54e.firebaseapp.com",
+  databaseURL:"https://tamil-chat-2d54e-default-rtdb.firebaseio.com",
+  projectId:"tamil-chat-2d54e",
+  storageBucket:"tamil-chat-2d54e.appspot.com",
+  messagingSenderId:"804705969240",
+  appId:"1:804705969240:web:658df281dd8360843c162d"
+};
+firebase.initializeApp(firebaseConfig);
+const db=firebase.database();
+
+let username=localStorage.getItem("name")||"";
+const loginWrap=document.getElementById("loginWrap");
+if(username) loginWrap.style.display="none";
+
+joinBtn.onclick=()=>{
+  username=nameInput.value.trim();
+  if(!username) return;
+  localStorage.setItem("name",username);
+  loginWrap.style.display="none";
 };
 
-const appFirebase = initializeApp(firebaseConfig);
-const db = getDatabase(appFirebase);
-const storage = getStorage(appFirebase);
-const messaging = getMessaging(appFirebase);
+sendBtn.onclick=sendMsg;
+messageInput.onkeydown=e=>{if(e.key==="Enter")sendMsg()};
 
-let myId = localStorage.getItem("uid") || Date.now().toString();
-let chatWith = "";
-
-/* LOGIN */
-window.register = async ()=>{
-  const file = photo.files[0];
-  const imgRef = sRef(storage,"profiles/"+myId);
-  await uploadBytes(imgRef,file);
-  const img = await getDownloadURL(imgRef);
-
-  set(ref(db,"users/"+myId),{
-    name:name.value,
-    age:age.value,
-    gender:gender.value,
-    img:img,
-    online:true
-  });
-
-  onDisconnect(ref(db,"users/"+myId+"/online")).set(false);
-  localStorage.setItem("uid",myId);
-
-  initFCM();
-  start();
-};
-
-/* START */
-function start(){
-  login.style.display="none";
-  app.style.display="block";
-
-  onValue(ref(db,"users"), snap=>{
-    onValue(ref(db,"blocked/"+myId), b=>{
-      const blocked=b.val()||{};
-      users.innerHTML="";
-      snap.forEach(u=>{
-        if(u.key!==myId && !blocked[u.key]){
-          const d=u.val();
-          users.innerHTML+=`
-          <div class="user" onclick="openChat('${u.key}','${d.name}')">
-            <img src="${d.img}">
-            <div>
-              <b>${d.name}</b><br>
-              <span class="${d.online?'online':'offline'}">
-                ${d.online?'🟢 Online':'🔴 Offline'}
-              </span>
-            </div>
-          </div>`;
-        }
-      });
-    });
-  });
+function sendMsg(){
+  const text=messageInput.value.trim();
+  if(!text) return;
+  db.ref("messages").push({name:username,text,time:Date.now()});
+  messageInput.value="";
 }
 
-/* CHAT */
-window.openChat=(id,name)=>{
-  chatWith=id;
-  chat.style.display="flex";
-  chatUser.innerText=name;
-  onValue(ref(db,"chats/"+chatId()), snap=>{
-    chatBody.innerHTML="";
-    snap.forEach(m=>{
-      chatBody.innerHTML+=`<div>${m.val().from==myId?"You":name}: ${m.val().text}</div>`;
-    });
-    chatBody.scrollTop=9999;
-  });
-};
-
-window.sendMsg=()=>{
-  if(!msg.value) return;
-  push(ref(db,"chats/"+chatId()),{
-    from:myId,
-    text:msg.value,
-    time:Date.now()
-  });
-  msg.value="";
-};
-
-function chatId(){
-  return [myId,chatWith].sort().join("_");
-}
-
-/* BLOCK */
-window.blockUser=()=>{
-  update(ref(db,"blocked/"+myId),{[chatWith]:true});
-  alert("User blocked");
-  chat.style.display="none";
-};
-
-/* REPORT */
-window.reportUser=()=>{
-  const reason=prompt("Reason?");
-  if(!reason) return;
-  push(ref(db,"reports"),{
-    from:myId,
-    reported:chatWith,
-    reason:reason,
-    time:Date.now()
-  });
-  alert("Reported");
-};
-
-/* FCM */
-function initFCM(){
-  Notification.requestPermission().then(p=>{
-    if(p==="granted"){
-      getToken(messaging,{
-        vapidKey:"YOUR_PUBLIC_VAPID_KEY"
-      }).then(token=>{
-        set(ref(db,"users/"+myId+"/fcm"),token);
-      });
-    }
-  });
-}
-
-onMessage(messaging,payload=>{
-  alert(payload.notification.title+"\n"+payload.notification.body);
+db.ref("messages").limitToLast(200).on("child_added",s=>{
+  const m=s.val();
+  const row=document.createElement("div");
+  row.className="msg-row"+(m.name===username?" self":"");
+  const bubble=document.createElement("div");
+  bubble.className="bubble";
+  bubble.textContent=m.text;
+  row.appendChild(bubble);
+  messages.appendChild(row);
+  messages.scrollTop=messages.scrollHeight;
 });
-
-if(localStorage.getItem("uid")) start();
 </script>
-
 </body>
 </html>
