--- a/test/index.html
+++ b/test/index.html
@@ -5,150 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Tamil Chat – Single HTML</title>
 
-<style>
-:root{
-  --accent:#25d366;
-  --panel:#202c33;
-  --muted:#97a4ab;
-}
-*{box-sizing:border-box}
-body{margin:0;background:#0b141a;color:#fff;font-family:system-ui,Arial,sans-serif}
-
-/* main chat */
-#messages{flex:1;overflow:auto;padding:12px;display:flex;flex-direction:column;gap:8px;background:#071215}
-.msg-row{display:flex;align-items:flex-end;max-width:80%;position:relative}
-.msg-row.self{align-self:flex-end;flex-direction:row-reverse}
-.avatar{width:36px;height:36px;border-radius:50%;background:#000;color:#fff;display:flex;align-items:center;justify-content:center;font-weight:700;margin:0 8px;position:relative;cursor:pointer;border:2px solid transparent;transition:border .18s ease-in-out;overflow:hidden}
-.avatar.online{border-color:var(--accent);box-shadow:0 0 0 0 rgba(37,211,102,.6);animation:pulse 1.5s infinite}
-@keyframes pulse{0%{box-shadow:0 0 0 0 rgba(37,211,102,.6)}70%{box-shadow:0 0 0 6px rgba(37,211,102,0)}100%{box-shadow:0 0 0 0 rgba(37,211,102,0)}}
-.popup-menu{display:none;position:absolute;top:-44px;left:0;background:var(--panel);border-radius:8px;padding:6px;flex-direction:column;z-index:30;min-width:110px}
-.avatar:hover .popup-menu{display:flex}
-.popup-menu button{background:none;border:0;color:#fff;padding:6px 8px;text-align:left;cursor:pointer;border-radius:6px}
-.bubble{background:var(--panel);padding:8px 12px;border-radius:12px;font-size:14px;line-height:1.3;word-break:break-word}
-.msg-row.self .bubble{background:#005c4b}
-.meta{font-size:12px;color:#53bdeb;margin-bottom:4px;display:flex;align-items:center;gap:8px}
-.time{font-size:11px;color:var(--muted);margin-top:6px;text-align:right}
-
-#inputBar{display:flex;padding:10px;background:var(--panel);align-items:center;gap:8px}
-#messageInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff;outline:none;font-size:14px}
-#sendBtn{width:44px;height:44px;border-radius:50%;border:0;background:var(--accent);color:#fff;font-size:18px;cursor:pointer}
-
-#statusLine{padding:6px 12px;font-size:13px;color:var(--muted);background:#071215}
-#toast{position:fixed;left:50%;transform:translateX(-50%);bottom:24px;background:#2a3942;color:#fff;padding:10px 14px;border-radius:10px;z-index:999;opacity:0;transition:.25s}
-#toast.show{opacity:1;bottom:40px}
-
-/* login */
-#loginWrap{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.6);z-index:999}
-#loginCard{background:#0b141a;padding:18px;border-radius:12px;display:flex;flex-direction:column;gap:10px;min-width:300px}
-#loginCard input{padding:10px;border-radius:10px;border:0;background:#162027;color:#fff}
-#loginCard button{padding:10px;border-radius:10px;border:0;background:var(--accent);color:#fff;cursor:pointer}
-
-/* private popup */
-#privatePopup{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.6);z-index:1000}
-.card{background:#0b141a;padding:12px;border-radius:12px;max-width:680px;width:96%;display:flex;flex-direction:column;max-height:92%}
-#privateHeader{display:flex;align-items:center;gap:8px;margin-bottom:8px}
-#privateMessages{flex:1;overflow:auto;padding:8px;background:#071215;border-radius:8px;display:flex;flex-direction:column;gap:8px}
-.private-bubble{background:#162027;padding:8px 10px;border-radius:10px;max-width:80%}
-.private-row.self{align-self:flex-end}
-#privateInputBar{display:flex;gap:8px;margin-top:8px}
-#privateInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff}
-#privateSend{width:44px;height:44px;border-radius:50%;border:0;background:var(--accent);color:#fff;font-size:18px;cursor:pointer}
-
-/* app shell */
-#app{display:flex;flex-direction:column;height:100vh}
-#topBar{display:flex;align-items:center;padding:10px;background:#071215}
-#titleText{font-weight:700}
-</style>
-</head>
-
-<body>
-
-<div id="app">
-  <div id="topBar">
-    <div id="titleText">Group Chat</div>
-  </div>
-
-  <div id="statusLine"></div>
-  <div id="messages"></div>
-
-  <div id="inputBar">
-    <input id="messageInput" placeholder="Type a message"/>
-    <button id="sendBtn">➤</button>
-  </div>
-</div>
-
-<div id="toast"></div>
-
-<div id="loginWrap">
-  <div id="loginCard">
-    <div style="font-weight:700">Enter your name</div>
-    <input id="nameInput" placeholder="Your name"/>
-    <button id="joinBtn">Join</button>
-  </div>
-</div>
-
-<div id="privatePopup">
-  <div class="card">
-    <div id="privateHeader">
-      <button id="closePrivate">⬅</button>
-      <div id="privateTitle"></div>
-    </div>
-    <div id="privateMessages"></div>
-    <div id="privateInputBar">
-      <input id="privateInput" placeholder="Private message"/>
-      <button id="privateSend">➤</button>
-    </div>
-  </div>
-</div>
-
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-
-<script>
-const firebaseConfig={
-  apiKey:"AIzaSyB1VbLbqBxCiG_bfGoQgQyapXwHUQ-Q7BU",
-  authDomain:"tamil-chat-2d54e.firebaseapp.com",
-  databaseURL:"https://tamil-chat-2d54e-default-rtdb.firebaseio.com",
-  projectId:"tamil-chat-2d54e",
-  storageBucket:"tamil-chat-2d54e.appspot.com",
-  messagingSenderId:"804705969240",
-  appId:"1:804705969240:web:658df281dd8360843c162d"
-};
-firebase.initializeApp(firebaseConfig);
-const db=firebase.database();
-
-let username=localStorage.getItem("name")||"";
-const loginWrap=document.getElementById("loginWrap");
-if(username) loginWrap.style.display="none";
-
-joinBtn.onclick=()=>{
-  username=nameInput.value.trim();
-  if(!username) return;
-  localStorage.setItem("name",username);
-  loginWrap.style.display="none";
-};
-
-sendBtn.onclick=sendMsg;
-messageInput.onkeydown=e=>{if(e.key==="Enter")sendMsg()};
-
-function sendMsg(){
-  const text=messageInput.value.trim();
-  if(!text) return;
-  db.ref("messages").push({name:username,text,time:Date.now()});
-  messageInput.value="";
-}
-
-db.ref("messages").limitToLast(200).on("child_added",s=>{
-  const m=s.val();
-  const row=document.createElement("div");
-  row.className="msg-row"+(m.name===username?" self":"");
-  const bubble=document.createElement("div");
-  bubble.className="bubble";
-  bubble.textContent=m.text;
-  row.appendChild(bubble);
-  messages.appendChild(row);
-  messages.scrollTop=messages.scrollHeight;
-});
+hi for
 </script>
 </body>
 </html>
