--- a/test/index.html
+++ b/test/index.html
@@ -82,10 +82,13 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
 #privateMessages{flex:1;overflow:auto;padding:8px;background:#071215;border-radius:8px;display:flex;flex-direction:column;gap:8px}
 .private-bubble{background:#162027;padding:8px 10px;border-radius:10px;max-width:80%}
 .private-row.self{align-self:flex-end}
-#privateInputBar{display:flex;gap:8px;margin-top:8px}
+#privateInputBar{display:flex;gap:8px;margin-top:8px;align-items:center}
 #privateInput{flex:1;padding:10px;border-radius:22px;border:0;background:#2a3942;color:#fff}
-#privateSend{width:44px;height:44px;border-radius:50%;border:0;background:var(--accent);color:#fff;font-size:18px;cursor:pointer}
-#typingPrivate{font-size:13px;color:var(--muted);margin-left:8px}
+#privateSend, .mediaBtn{width:40px;height:40px;border-radius:50%;border:0;background:var(--accent);color:#fff;font-size:16px;cursor:pointer;display:flex;align-items:center;justify-content:center}
+.mediaBtn{background:#2a3942;font-size:18px}
+#micBtn.recording{background:#ff3b30;animation:pulse 1s infinite}
+#privateMessages img{max-width:200px;border-radius:8px;margin-top:5px;display:block}
+#privateMessages audio{max-width:240px;height:35px;margin-top:5px}
 
 /* CALLS */
 #callOverlay{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.75);z-index:10000;flex-direction:column;color:#fff}
@@ -183,6 +186,9 @@ body{margin:0;background:var(--bg);color:#e9edef;font-family:Arial,system-ui;min
     <div id="privateMessages"></div>
     <div id="typingPrivate" class="small"></div>
     <div id="privateInputBar">
+      <input type="file" id="privImgFile" accept="image/*" style="display:none">
+      <button class="mediaBtn" onclick="document.getElementById('privImgFile').click()" title="Send Image">📷</button>
+      <button class="mediaBtn" id="micBtn" title="Voice Message (Max 10s)">🎤</button>
       <input id="privateInput" placeholder="Type a message" autocomplete="off"/>
       <button id="privateSend">➤</button>
     </div>
@@ -233,6 +239,7 @@ const loginWrap = document.getElementById('loginWrap'), nameInput = document.get
 const privatePopup = document.getElementById('privatePopup'), privateTitle = document.getElementById('privateTitle'), privateMessages = document.getElementById('privateMessages'), privateInput = document.getElementById('privateInput'), privateSend = document.getElementById('privateSend'), closePrivate = document.getElementById('closePrivate'), callBtn = document.getElementById('callBtn'), blockBtn = document.getElementById('blockBtn');
 const callOverlay = document.getElementById('callOverlay'), callFrom = document.getElementById('callFrom'), acceptCallBtn = document.getElementById('acceptCallBtn'), declineCallBtn = document.getElementById('declineCallBtn'), ringtone = document.getElementById('ringtone'), inCallBar = document.getElementById('inCallBar'), inCallWith = document.getElementById('inCallWith'), inCallElapsed = document.getElementById('inCallElapsed'), endCallBtn = document.getElementById('endCallBtn'), dingAudio = document.getElementById('dingAudio');
 const settingsBtn = document.getElementById('settingsBtn'), settingsPanel = document.getElementById('settingsPanel'), toggleCall = document.getElementById('toggleCall'), toggleCallKnob = document.getElementById('toggleCallKnob'), togglePrivate = document.getElementById('togglePrivate'), togglePrivateKnob = document.getElementById('togglePrivateKnob'), profileImgInput = document.getElementById('profileImgInput');
+const privImgFile = document.getElementById('privImgFile'), micBtn = document.getElementById('micBtn');
 
 let username = localStorage.getItem('guestName') || '';
 let profileImage = localStorage.getItem('profileImage') || '';
@@ -244,6 +251,56 @@ const SETTINGS_KEY = 'chat_settings_v1';
 let settings = JSON.parse(localStorage.getItem(SETTINGS_KEY) || '{}');
 if(typeof settings.audioCall === 'undefined') settings.audioCall = true;
 if(typeof settings.privateChat === 'undefined') settings.privateChat = true;
+
+/* VOICE & MEDIA ADDITIONS */
+let mediaRecorder, audioChunks = [], recordTimer;
+micBtn.onclick = async () => {
+  if (mediaRecorder && mediaRecorder.state === "recording") {
+    clearTimeout(recordTimer);
+    mediaRecorder.stop();
+    micBtn.classList.remove('recording');
+    return;
+  }
+  try {
+    const stream = await navigator.mediaDevices.getUserMedia({ audio: true });
+    mediaRecorder = new MediaRecorder(stream);
+    audioChunks = [];
+    mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
+    mediaRecorder.onstop = async () => {
+      const blob = new Blob(audioChunks, { type: 'audio/webm' });
+      const reader = new FileReader();
+      reader.onload = e => sendPrivateMedia(e.target.result, 'voice');
+      reader.readAsDataURL(blob);
+      stream.getTracks().forEach(track => track.stop());
+    };
+    mediaRecorder.start();
+    micBtn.classList.add('recording');
+    // Auto-stop after 10 seconds
+    recordTimer = setTimeout(() => {
+      if (mediaRecorder.state === "recording") {
+        mediaRecorder.stop();
+        micBtn.classList.remove('recording');
+        showToast("Recording limit reached (10s)");
+      }
+    }, 10000);
+  } catch (err) { showToast("Mic permission denied"); }
+};
+
+privImgFile.onchange = e => {
+  const file = e.target.files[0]; if(!file) return;
+  const reader = new FileReader();
+  reader.onload = ev => sendPrivateMedia(ev.target.result, 'image');
+  reader.readAsDataURL(file);
+};
+
+function sendPrivateMedia(data, type) {
+  if(!privateChatWith) return;
+  const key = chatId(username, privateChatWith);
+  const msgData = { name:username, time:Date.now() };
+  if(type === 'image') msgData.image = data; else msgData.voice = data;
+  db.ref(`privateChats/${key}`).push(msgData);
+  db.ref(`unread/${privateChatWith}/${username}`).transaction(c => (c||0)+1);
+}
 
 /* HELPERS */
 function showToast(msg){ toastEl.textContent = msg; toastEl.classList.add('show'); setTimeout(()=> toastEl.classList.remove('show'), 1600); }
@@ -388,7 +445,10 @@ function renderPrivateMessageWithId(chatKey, id, msg){
   let set = renderedPrivateMsgIds.get(chatKey); if(!set) { set = new Set(); renderedPrivateMsgIds.set(chatKey, set); }
   if(set.has(id)) return; set.add(id);
   const row = document.createElement('div'); row.className = 'private-row ' + (msg.name===username?'self':'');
-  row.innerHTML = `<div class="private-bubble">${msg.text}</div><div class="time">${formatTime(msg.time)}</div>`;
+  let bodyContent = `<div class="private-bubble">${msg.text || ''}</div>`;
+  if(msg.image) bodyContent = `<div class="private-bubble"><img src="${msg.image}" style="max-width:100%;border-radius:8px"></div>`;
+  if(msg.voice) bodyContent = `<div class="private-bubble"><audio controls src="${msg.voice}" style="height:34px;width:200px"></audio></div>`;
+  row.innerHTML = `${bodyContent}<div class="time">${formatTime(msg.time)}</div>`;
   privateMessages.appendChild(row); scrollToBottomSoon(privateMessages);
 }
 
